add be book-room

--- a/app/src/main/res/layout/book_room_list.xml
+++ b/app/src/main/res/layout/book_room_list.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#fff1d6"
+    android:id="@+id/book_room_list"
     >
 
     <com.example.app.ui.customeview.AppBarView
@@ -28,6 +29,7 @@
 
 
         <com.example.app.ui.customeview.UtilityBarView
+            android:id="@+id/utilityBarView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -41,90 +43,30 @@
             >
 
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listRoom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:orientation="vertical"
-                >
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Nhập vị trí"
-                    app:boxBackgroundColor="#eeeeee"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusBottomStart="20dp"
-                    app:boxCornerRadiusTopEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    android:layout_marginTop="20dp"
-                    >
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="20dp"
-                        android:drawableStart="@drawable/outline_location_on_24"
-                        android:drawablePadding="10dp"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Chọn ngày"
-                    app:boxBackgroundColor="#eeeeee"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusBottomStart="20dp"
-                    app:boxCornerRadiusTopEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    android:layout_marginTop="10dp"
-                    >
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="20dp"
-                        android:drawableStart="@drawable/outline_location_on_24"
-                        android:drawablePadding="10dp"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Số người"
-                    app:boxBackgroundColor="#eeeeee"
-                    app:boxCornerRadiusBottomEnd="20dp"
-                    app:boxCornerRadiusBottomStart="20dp"
-                    app:boxCornerRadiusTopEnd="20dp"
-                    app:boxCornerRadiusTopStart="20dp"
-                    android:layout_marginTop="10dp"
-                    >
-
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="20dp"
-                        android:drawableStart="@drawable/outline_location_on_24"
-                        android:drawablePadding="10dp"
-                        />
-                </com.google.android.material.textfield.TextInputLayout>
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    android:layout_marginTop="20dp"
-                    />
-            </LinearLayout>
-
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp"
+                android:visibility="gone"
+                />
         </androidx.cardview.widget.CardView>
+
+
+        <TextView
+            android:id="@+id/textNotification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Khồng tìm thấy khách sạn phù hợp"
+            android:textSize="20dp"
+            android:gravity="center"
+            android:layout_marginVertical="20dp"
+            />
     </LinearLayout>
+
+
 
     <com.example.app.ui.customeview.NavBarView
         android:id="@+id/nav_bar"
