--- a/app/src/main/res/layout/book_room_check.xml
+++ b/app/src/main/res/layout/book_room_check.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/book_room_check"
     >
 
 
@@ -73,6 +74,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/username"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -94,18 +96,14 @@
                         android:text="Tên khách sạn"
                         />
 
-                    <View
-                        android:layout_width="0dp"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        />
-
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:id="@+id/hotelName"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
                         android:text="VietJet Air"
                         android:gravity="end"
+                        android:layout_weight="1"
                         />
                 </LinearLayout>
 
@@ -129,6 +127,36 @@
                         />
 
                     <TextView
+                        android:id="@+id/quantityPeople"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="TP HCM"
+                        android:gravity="end"
+                        />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    >
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        android:text="Số phòng"
+                        />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="1"
+                        />
+
+                    <TextView
+                        android:id="@+id/quantityRoom"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -157,6 +185,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/checkInDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -185,6 +214,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/checkOutDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -213,6 +243,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -231,6 +262,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/payment"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Thanh Toán"
@@ -250,6 +282,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/cancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Hủy"
