--- a/app/src/main/res/layout/receipt_payment_item.xml
+++ b/app/src/main/res/layout/receipt_payment_item.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="20dp"
     android:backgroundTint="#fff1d6"
+    android:layout_marginVertical="10dp"
     >
 
     <LinearLayout
