--- a/app/src/main/res/layout/book_ticket_activity.xml
+++ b/app/src/main/res/layout/book_ticket_activity.xml
@@ -7,6 +7,7 @@
     android:id="@+id/book_ticket"
     >
 
+
     <com.example.app.ui.customeview.AppBarView
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -27,6 +28,7 @@
         >
 
         <com.example.app.ui.customeview.UtilityBarView
+            android:id="@+id/utilityBarView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -65,7 +67,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="20dp"
-                        android:text="Từ"
+                        android:text="Điểm khởi hành"
                         android:textSize="20dp" />
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -79,12 +81,14 @@
                         app:boxCornerRadiusTopStart="20dp">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/source"
+                            android:id="@+id/origin"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
-                            android:textSize="20dp" />
+                            android:textSize="20dp"
+                            android:text="SGN"
+                            />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -93,7 +97,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="20dp"
-                        android:text="Đến"
+                        android:text="Điểm đến"
                         android:textSize="20dp" />
 
                     <com.google.android.material.textfield.TextInputLayout
@@ -112,7 +116,9 @@
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
-                            android:textSize="20dp" />
+                            android:textSize="20dp"
+                            android:text="HAN"
+                            />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -121,13 +127,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="20dp"
-                        android:text="Khởi hành"
+                        android:text="Ngày khởi hành"
                         android:textSize="20dp" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Chọn ngày đi"
+                        android:hint="2025-12-03"
                         app:boxBackgroundColor="#eeeeee"
                         app:boxCornerRadiusBottomEnd="20dp"
                         app:boxCornerRadiusBottomStart="20dp"
@@ -140,7 +146,9 @@
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
-                            android:textSize="20dp" />
+                            android:textSize="20dp"
+                            android:text="2025-12-03"
+                            />
                     </com.google.android.material.textfield.TextInputLayout>
 
 
@@ -149,13 +157,13 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="20dp"
-                        android:text="Khứ hồi"
+                        android:text="Số lượng người lớn"
                         android:textSize="20dp" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Chọn ngày về"
+                        android:hint="1"
                         app:boxBackgroundColor="#eeeeee"
                         app:boxCornerRadiusBottomEnd="20dp"
                         app:boxCornerRadiusBottomStart="20dp"
@@ -163,13 +171,46 @@
                         app:boxCornerRadiusTopStart="20dp">
 
                         <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/returnDay"
+                            android:id="@+id/quantityAdult"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/outline_location_on_24"
                             android:drawablePadding="10dp"
-                            android:textSize="20dp" />
+                            android:textSize="20dp"
+                            android:text="1"
+                            />
                     </com.google.android.material.textfield.TextInputLayout>
+
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginTop="20dp"
+                        android:text="Số lượng trẻ nhỏ"
+                        android:textSize="20dp" />
+
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="1"
+                        app:boxBackgroundColor="#eeeeee"
+                        app:boxCornerRadiusBottomEnd="20dp"
+                        app:boxCornerRadiusBottomStart="20dp"
+                        app:boxCornerRadiusTopEnd="20dp"
+                        app:boxCornerRadiusTopStart="20dp">
+
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/quantityChildren"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:drawableStart="@drawable/outline_location_on_24"
+                            android:drawablePadding="10dp"
+                            android:textSize="20dp"
+                            android:text="1"
+                            />
+                    </com.google.android.material.textfield.TextInputLayout>
+
 
                     <androidx.cardview.widget.CardView
                         android:layout_width="wrap_content"
