--- a/app/src/main/res/layout/book_ticket_check.xml
+++ b/app/src/main/res/layout/book_ticket_check.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/book_ticket_check"
+    >
 
     <com.example.app.ui.customeview.AppBarView
         android:id="@+id/app_bar"
@@ -71,6 +73,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/nameCustomer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -99,6 +102,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/nameAirline"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -127,6 +131,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/origin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -155,6 +160,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/destination"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -183,6 +189,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/departureArriveTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -210,6 +217,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/departureDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -238,6 +246,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -256,6 +265,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/pay"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Thanh Toán"
@@ -275,6 +285,7 @@
                     >
 
                     <TextView
+                        android:id="@+id/cancel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Hủy"
