--- a/app/src/main/res/layout/book_ticket_item.xml
+++ b/app/src/main/res/layout/book_ticket_item.xml
@@ -33,12 +33,14 @@
 
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:layout_weight="0.5"
                     >
                     
                     <TextView
+                        android:id="@+id/nameAirline"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="VietJetAir"
@@ -62,22 +64,17 @@
                         />
                 </LinearLayout>
 
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"
-                    android:layout_weight="1"
-                    />
-
-
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="end"
+                    android:layout_weight="1"
                     >
 
                     <TextView
+                        android:id="@+id/duration"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="2h10p"
@@ -86,6 +83,7 @@
 
 
                     <TextView
+                        android:id="@+id/departureArriveTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="6h10 - 8h20"
@@ -94,6 +92,7 @@
 
 
                     <TextView
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1.200.000 đ"
@@ -111,6 +110,7 @@
                 >
 
                 <TextView
+                    android:id="@+id/book"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Đặt vé"
