--- a/app/src/main/res/layout/book_ticket_list.xml
+++ b/app/src/main/res/layout/book_ticket_list.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#fff1d6">
+    android:background="#fff1d6"
+    android:id="@+id/book_ticket_list"
+    >
 
     <com.example.app.ui.customeview.AppBarView
         android:id="@+id/app_bar"
@@ -26,6 +28,7 @@
 
 
         <com.example.app.ui.customeview.UtilityBarView
+            android:id="@+id/utilityBarView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
@@ -40,12 +43,23 @@
             >
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/listTicket"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:visibility="gone"
                 />
         </androidx.cardview.widget.CardView>
+
+        <TextView
+            android:id="@+id/textNotification"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Không tìm thấy chuyến bay phù hợp"
+            android:textSize="20dp"
+            android:gravity="center"
+            />
     </LinearLayout>
 
     <com.example.app.ui.customeview.NavBarView
