--- a/app/src/main/res/layout/book_ticket_success.xml
+++ b/app/src/main/res/layout/book_ticket_success.xml
@@ -2,7 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/book_ticket_success"
+    >
 
     <com.example.app.ui.customeview.AppBarView
         android:id="@+id/app_bar"
@@ -71,6 +73,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/nameCutomer"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -99,6 +102,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/nameAirline"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -127,6 +131,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/origin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -155,6 +160,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/destination"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -183,6 +189,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/departureArriveTime"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -210,6 +217,7 @@
                         />
 
                     <TextView
+                        android:id="@+id/departureDate"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20dp"
@@ -238,12 +246,12 @@
                         />
 
                     <TextView
+                        android:id="@+id/price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="20dp"
-                        android:text="1.200.000 đ"
                         android:gravity="end"
-                        />
+                        android:text="1.200.000 đ"
+                        android:textSize="20dp" />
                 </LinearLayout>
 
 
@@ -263,6 +271,7 @@
                         >
 
                         <TextView
+                            android:id="@+id/continueBookTicket"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Tiếp tục đặt vé"
@@ -286,6 +295,7 @@
                         >
 
                         <TextView
+                            android:id="@+id/homeCustomer"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
                             android:padding="10dp"
