--- a/app/src/main/res/layout/book_ticket_item.xml
+++ b/app/src/main/res/layout/book_ticket_item.xml
@@ -23,6 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center"
                 >
 
                 <ImageView
@@ -31,74 +32,88 @@
                     android:src="@mipmap/ic_plane"
                     />
 
-
                 <LinearLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:orientation="vertical"
-                    android:layout_weight="0.5"
-                    >
-                    
-                    <TextView
-                        android:id="@+id/nameAirline"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="VietJetAir"
-                        android:textSize="20dp"
-                        />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Thời gian"
-                        android:textSize="20dp"
-                        />
-
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Giá vé"
-                        android:textSize="20dp"
-                        />
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="end"
                     android:layout_weight="1"
                     >
 
-                    <TextView
-                        android:id="@+id/duration"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="2h10p"
-                        android:textSize="20dp"
-                        />
+                        >
+
+                        <TextView
+                            android:id="@+id/nameAirline"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="VietJetAir"
+                            android:textSize="20dp"
+                            android:layout_weight="1"
+                            />
 
 
-                    <TextView
-                        android:id="@+id/departureArriveTime"
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/duration"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="2h10p"
+                            android:textSize="20dp"
+                            />
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="6h10 - 8h20"
-                        android:textSize="20dp"
-                        />
+                        >
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Thời gian"
+                            android:textSize="20dp"
+                            android:layout_weight="1"
+                            />
 
 
-                    <TextView
-                        android:id="@+id/price"
-                        android:layout_width="wrap_content"
+                        <TextView
+                            android:id="@+id/departureArriveTime"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="6h10 - 8h20"
+                            android:textSize="20dp"
+                            />
+                    </LinearLayout>
+
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="1.200.000 đ"
-                        android:textSize="20dp"
-                        />
+                        >
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="Giá vé"
+                            android:textSize="20dp"
+                            android:layout_weight="1"
+                            />
+
+
+                        <TextView
+                            android:id="@+id/price"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="1.200.000 đ"
+                            android:textSize="20dp"
+                            />
+                    </LinearLayout>
                 </LinearLayout>
+
+
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -106,7 +121,8 @@
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="30dp"
                 app:cardBackgroundColor="#feddbc"
-                android:layout_marginTop="10dp"
+                app:cardUseCompatPadding="true"
+                app:cardPreventCornerOverlap="true"
                 >
 
                 <TextView
