--- a/app/src/main/res/layout/book_ticket_list.xml
+++ b/app/src/main/res/layout/book_ticket_list.xml
@@ -19,11 +19,13 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:orientation="vertical"
+        android:layout_marginVertical="20dp"
         >
 
 
