--- a/app/src/main/res/layout/deposit_phone_activity.xml
+++ b/app/src/main/res/layout/deposit_phone_activity.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/deposit_phone"
+    android:background="#fff1d6"
     >
 
     <com.example.app.ui.customeview.AppBarView
@@ -26,6 +27,7 @@
         >
 
         <com.example.app.ui.customeview.UtilityBarView
+            android:id="@+id/utilityBarView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             />
