--- a/app/src/main/res/layout/notification_activity.xml
+++ b/app/src/main/res/layout/notification_activity.xml
@@ -18,9 +18,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lstNotification"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintBottom_toTopOf="@id/nav_bar"
         android:layout_margin="20dp"
         android:visibility="gone"
         />
