--- a/app/src/main/res/layout/receipt_payment_activity.xml
+++ b/app/src/main/res/layout/receipt_payment_activity.xml
@@ -19,11 +19,12 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginVertical="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_bar"
+        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
         android:orientation="vertical">
 
         <com.example.app.ui.customeview.UtilityBarView
