--- a/app/src/main/res/layout/receipt_payment_check.xml
+++ b/app/src/main/res/layout/receipt_payment_check.xml
@@ -59,7 +59,8 @@
                     android:layout_marginHorizontal="20dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="0dp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    >
 
 
 
@@ -103,7 +104,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
-                            android:text="EVN TP.HCM"
+                            android:text="EVN"
                             android:textSize="15dp"
                             />
                     </LinearLayout>
