--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -62,4 +62,35 @@
         <item name="cornerRadius">999dp</item>
     </style>
 
+    <style name="StatusActive">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:paddingLeft">12dp</item>
+        <item name="android:paddingRight">12dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+
+        <item name="android:background">@drawable/bg_rounded_card</item>
+        <item name="android:backgroundTint">#90EE90</item>
+        <item name="android:textColor">#006400</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/adamina</item>
+    </style>
+
+    <style name="StatusLocked">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+
+        <item name="android:paddingLeft">20dp</item>
+        <item name="android:paddingRight">20dp</item>
+        <item name="android:paddingTop">6dp</item>
+        <item name="android:paddingBottom">6dp</item>
+
+        <item name="android:background">@drawable/bg_rounded_card</item>
+        <item name="android:backgroundTint">#FFCCBC</item>
+        <item name="android:textColor">#A04000</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:fontFamily">@font/adamina</item>
+    </style>
 </resources>
